<resources>
    <string name="app_name">CampusGo</string>
    <string name="lost_detail">详情</string>
    <string name="post_detail">发布</string>
    <string name="set_detail">设置</string>
    <string name="lib_info">同济大学嘉定校区图书馆总高度为65.1米，占地面积16590平方米，总建筑面积约34620平方米。其中地上建筑14层，地下一层。嘉定校区图书馆拥有丰富的馆藏资源，收藏与嘉定校区学科专业相关的印刷形资源有中外文图书近80万册、中外文现刊1500种、中外文期刊合订本8.3万册、报纸100余种；另外读者还可访问2万余种中外文电子期刊和30余万册电子图书和50余种网络版学术资源数据库。</string>
    <string name="service_content">
        1楼：大厅·借还书·就餐区\n2楼：研读间（1-3人）\n3楼：报告厅（定期放映外语教学和参考影片/不定期举办讲座）\n7楼：电子阅览室 14楼：研习室（3-10人） 研读间/研习室可提前三天在“同济大学图书馆”微信公众号预定 每层配备有自助打印机
    </string>
    <string name="service">服务</string>
    <string name="open_time2">期末期间1-3楼延长开放至23:00/节假日闭馆，请注意查看通知</string>
    <string name="open_time1">07:30~22：00</string>
    <string name="open">开放时间</string>
    <string name="go">到这去</string>
    <string name="loc">位置</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lost_name">失物招领</string>
    <string name="jishi_info">济事楼位于校园正门，是呈半圆排列的四栋行政楼中的一幢。济事楼又叫培训楼，有软院、中德学院、汽车学院的实验室。二楼是同济大学职业教育学院。软件学院的大部分事务都在济事楼办理。</string>
    <string name="jishi_ser">1楼：中德学院实验室。 2楼：同济大学技术教育学院。 3楼：软件学院实验室。 4楼：TAC苹果俱乐部，软院实验室，机房。444 软院教务办，其余为教师办公室。 5楼：谷歌俱乐部，paypal实验室，盛大俱乐部，机房，软院团学联活动室，教师办公室，软院实验室。</string>
    <string name="tongde_ser">1楼：茶水吧·大厅·吉协排练室\n2楼：舞团、c4街舞协会排练厅·星空排练厅\n3楼：小演播厅 进行过嘉定之星的初赛复赛（偶尔可做排练厅）·体育活动区\n4楼：库房，有镜子，可排练\n</string>
    <string name="tongde_info">同德位于校园正门，是呈半圆排列的四栋行政楼中的一幢。同德楼又叫汽车展览中心。同德楼主要作为社团活动中心，吉协，街舞社，舞团等平时都在同德楼开展活动。一楼有茶水吧，是平时休闲学习的好选择。三楼有乒乓球台，供学生参与。</string>
    <string name="tongxin_ser">1楼：办公\n2楼：学生事务处理中心（办理事务包括补办一卡通、学生证、出国交换事宜等）\n4楼：校园广播室</string>
    <string name="f_ser">1楼：办公·失物招领·教室·咖啡厅\n2楼：阶梯教室\n3楼：教室\n4楼：办公</string>


</resources>
